added emp and dept realtion and some fields in dept
