# src/routers/departments/departments.openapi.yaml
@@ -73,6 +73,21 @@ paths:
                   example: "raipur"
                   default: "raipur"
                   description: Name of the department
+                email:
+                  type: string
+                  example: "sample@mail.com"
+                  default: "sample@mail.com"
+                  description: Email of the department
+                city:
+                  type: string
+                  example: "raipur"
+                  default: "raipur"
+                  description: City of the department
+                state:
+                  type: string
+                  example: "Chhattisgarh"
+                  default: "Chhattisgar"
+                  description: State of the department
       responses:
         "200":
           description: OK
@@ -309,6 +324,18 @@ components:
           format: date-time
           description: Date of creation
           example: "2021-08-10T09:00:00Z"
+        email:
+          type: string
+          description: Email of the department
+          example: "sample@mail.com"
+        city:
+          type: string
+          description: City of the department
+          example: "raipur"
+        state:
+          type: string
+          description: State of the department
+          example: "Chhattisgarh"
       required:
         - id
         - name
